fake data and http for query mock data