@@ -9,9 +9,10 @@ import zio._
  */
 object BitlapServer extends zio.App {
 
+  // 在java 9以上运行时，需要JVM参数：--add-exports java.base/jdk.internal.ref=ALL-UNNAMED
   override def run(args: List[String]): URIO[zio.ZEnv, ExitCode] =
     (for {
-      _ <- ZIO.collectAll(BitlapServerProvider.serverProviders.map(_.service(args)))
+      r <- ZIO.collectAll(BitlapServerProvider.serverProviders.map(_.service(args).fork))
       _ <- putStrLn("""
                       |    __    _ __  __
                       |   / /_  (_) /_/ /___ _____
@@ -20,6 +21,7 @@ object BitlapServer extends zio.App {
                       |/_.___/_/\__/_/\__,_/ .___/
                       |                   /_/
                       |""".stripMargin)
+      _ <- ZIO.collectAll(r.map(_.join))
     } yield ()).foldM(
       e => ZIO.fail(e).exitCode,
       _ => ZIO.effectTotal(ExitCode.success)
